# Vantage

./: .gitignore  .mcp.json  CLAUDE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.playwright-mcp/: page-2026-04-04T20-06-23-224Z.yml  page-2026-04-08T06-08-04-987Z.yml  page-2026-04-08T06-08-54-250Z.yml  page-2026-04-08T06-09-22-885Z.yml  page-2026-04-08T06-09-35-630Z.yml  page-2026-04-08T06-09-47-990Z.yml  page-2026-04-08T06-10-08-022Z.yml  page-2026-04-08T06-10-22-676Z.yml  page-2026-04-08T06-10-36-373Z.yml  page-2026-04-08T06-11-18-328Z.yml  page-2026-04-08T06-11-53-078Z.yml  page-2026-04-08T06-12-05-128Z.yml  page-2026-04-08T06-12-17-759Z.yml  page-2026-04-08T06-12-29-977Z.yml  page-2026-04-08T06-12-42-919Z.yml  page-2026-04-08T06-12-56-896Z.yml  page-2026-04-08T06-14-35-703Z.yml  page-2026-04-08T06-15-33-630Z.yml  page-2026-04-08T06-15-40-575Z.yml  page-2026-04-08T06-16-12-863Z.yml  page-2026-04-08T06-16-59-540Z.yml  page-2026-04-08T06-18-09-824Z.yml
audit-report/: 00-MASTER-AUDIT-REPORT.md  01-frontend-architecture.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analytics.rs  checkpoint.rs  claude_settings.rs  git.rs  indexer.rs  lib.rs  mcp.rs  merge_queue.rs  plan_usage.rs  plugins.rs  prerequisites.rs  search.rs  session_search.rs  theme.rs  workspace.rs  worktree.rs
src-tauri/src/claude/: process.rs  protocol.rs  session.rs
src-tauri/src/files/: mod.rs  operations.rs  tree.rs  watcher.rs
src-tauri/src/terminal/: mod.rs  pty_manager.rs  shell_detect.rs
(+326 files in other folders)
