[package]
name = "vantage"
version = "0.1.0"
description = "Vantage IDE"
authors = ["you"]
edition = "2021"

[lib]
name = "vantage_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = "0.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ignore = "0.4"
notify-debouncer-full = "0.7"
tauri-plugin-pty = "0.2"
tauri-plugin-dialog = "2"
